# carousell_upload

./: .gitignore  BUILD_ORGANIZATION.md  BUILD_USAGE.md  CAROUSELL_UPLOADER_REVIEW.md  DEPENDENCY_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INTEGRATION_SUMMARY.md  DOMAIN_OPTIMIZATION_SUMMARY.md  Dockerfile.windows  FILE_EXTENSION_FIX.md  GITHUB_ACTIONS_PERMISSIONS.md  GITHUB_ACTIONS_TRIGGER.md  GITHUB_ACTIONS_WINDOWS_FIX.md  IMAGE_FORMAT_OPTIMIZATION.md  INSTALL.md  INSTALLATION_SUMMARY.md  INSTALL_SCRIPT_ENHANCEMENT.md  LOGGING_CONFIG_EXAMPLE.md  MIGRATION_SUMMARY.md  MODULAR_UPLOADER_SUMMARY.md  MULTI_BROWSER_CONFIG_SUMMARY.md  PAGE_GOTO_OPTIMIZATION_SUMMARY.md  PRICE_TITLE_OPTIMIZATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_DEPLOYMENT.md  README.md  SCRIPT_ANALYSIS.md  UNIFIED_DEPLOYMENT.md  UPLOAD_FACTORY_OPTIMIZATION_SUMMARY.md  WINDOWS_PYTHON_GUIDE.md  __init__.py  activate_env.sh  build.bat  build.py  build.sh  build_cross_platform.py  build_exe.py  build_macos_to_windows.py  build_windows.bat  build_windows_from_mac.py  (+26 more)
.github/workflows/: build-windows-simple.yml  build-windows.yml  main.yml
browser/: __init__.py  actions.py  browser.py  browser_factory.py  browser_interface.py  browser_selector.py
cli/: __init__.py  cli.py  main.py
config/: css_selectors.yaml  settings.example.yaml  settings.yaml
core/: __init__.py  config.py  logger.py  models.py
data/: __init__.py  excel_parser.py  record_manager.py
scripts/: docker-deploy.sh  quick-deploy.sh  windows-install.bat  windows-install.ps1
uploader/: __init__.py  actions.py  base_uploader.py  browser.py  carousell_uploader.py  carousell_uploader_new.py  cli.py  config.py  css_selector_manager.py  css_selector_manager_simple.py  enhanced_safe_actions.py  excel_parser.py  image_clicker.py  main.py  models.py  multi_account_uploader.py  record_manager.py  utils.py
uploader/actions/: __init__.py  enhanced_safe_actions.py
uploader/config/: __init__.py  enhanced_css_selector_manager.py  regional_config_loader.py
uploader/core/: __init__.py  base_uploader.py  carousell_uploader.py
uploader/factory/: __init__.py  uploader_factory.py
uploader/multi/: __init__.py  multi_account_uploader.py
uploader/regions/: __init__.py
uploader/regions/hk/: __init__.py
uploader/regions/hk/bags/: bags_uploader.py  css_selectors.yaml
uploader/regions/hk/clothes/: clothes_uploader.py  css_selectors.yaml
uploader/regions/hk/sneakers/: css_selectors.yaml  sneakers_uploader.py
uploader/regions/my/: __init__.py
uploader/regions/my/bags/: bags_uploader.py  css_selectors.yaml
uploader/regions/my/clothes/: clothes_uploader.py  css_selectors.yaml
uploader/regions/my/sneakers/: css_selectors.yaml  sneakers_uploader.py
uploader/regions/sg/: __init__.py
uploader/regions/sg/bags/: __init__.py  bags_uploader.py  css_selectors.yaml
uploader/regions/sg/clothes/: clothes_uploader.py  css_selectors.yaml
uploader/regions/sg/sneakers/: css_selectors.yaml  sneakers_uploader.py
uploader/utils/: __init__.py  ip_validator.py
